 20100113 (T.S.)
 - src/padProto.c, src/padStream.c, src/padStream.h:
   moved stream connection state handling into the padStream module and
   added a 'timeout' feature so that a stream that is not 'petted' or
   re-'started' within padStreamTimeoutSecs seconds it is forcefully stopped.
 - src/padStream.c: BUGFIX: ensure proper alignment of 'replyPacket'.
 - src/padStream.c: padStreamStart() resets connection state to 'unconnected'
   if start_stop_callback() returns nonzero and passes this return code
   to caller.
 - src/padStream.c: padStreamStart(), padStreamStop() - moved execution
   of start_stop_callback() into mutex-protected section.
 - src/padStream.c: padStreamStop() - reset/clear connection regardless
   of result returned by start_stop_callback().
 20100112 (T.S.)
 - src/padProto.c: let 'padRequest' use a RBUF instead of our own stack
   memory so that we can use udpCommSendPkt() (avoiding a copy operation).
 - src/udpComm.c, src/udpComm.h, src/udpCommBSD.c:
   CHANGED udpCommConnect() semantics DEVIATING FROM BSD 'connect()'.
   If the peer address is an IPv4 multicast-address then 'udpCommConnect()'
   just 'memorizes' the peer's address/port for sending. However, when
   receiving packets they are *not* filtered against the peer address/port
   (this would never succeed since the sender is never the connected MC
   address).
   Added extra argument to udpSockConnect() allowing the user to choose
   the desired semantics. udpCommConnect() chooses the 'multicast-passthrough'
   option.
 20091215 (T.S.)
 - configure/CONFIG_SITE, src/Makefile: define CROSS_COMPILER_TARGET_ARCHS
   in the former file.
 - configure/RELEASE, src/Makefile: Determine from SDDS_LIB (optionally
   defined by 'configure/RELEASE') variable whether to build with SDDS
   support or without.
 - src/hostStream.h, src/hostStream.c, src/padProtoHost.c: add 'unused'
   arg to padStreamSimulated() so that the declaration matches the (newly